--- a/Front_End/src/app/componentes/educacion/educacion.component.css
+++ b/Front_End/src/app/componentes/educacion/educacion.component.css
@@ -11,7 +11,7 @@
 
 
 }
-
+/*
 .social-links li a {
   -webkit-border-radius: 50%;
   background-color: rgba(247, 157, 132, 0.85);
@@ -23,7 +23,7 @@
   text-align: center;
   width: 30px;
   font-size: 12px;
-}
+} */
 
 
 a {
