--- a/Front_End/src/app/componentes/educacion/educacion.component.css
+++ b/Front_End/src/app/componentes/educacion/educacion.component.css
@@ -8,10 +8,14 @@
   height: auto;
   padding: 40px;
   background-color: #f4d58d;
-
-
 }
-/*
+
+
+h5 {
+  font-family: 'Abril Fatface', cursive;
+}
+
+
 .social-links li a {
   -webkit-border-radius: 50%;
   background-color: rgba(247, 157, 132, 0.85);
@@ -23,7 +27,7 @@
   text-align: center;
   width: 30px;
   font-size: 12px;
-} */
+}
 
 
 a {
