--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
@@ -16,7 +16,7 @@
 
 <div class="contenido" id="main-container">
   <div class="row">
-    <div *ngFor="let experiencia of experiencia">
+    <div *ngFor="let experiencia of experiencias">
       <div class="listaedu">
         <h5>{{experiencia.empresa}}</h5>
         <h6>{{experiencia.cargo}}</h6>
