--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
@@ -76,9 +76,9 @@
           <div class="modal-body">
             <form #editForm="ngForm">
               <label for="empresa">Empresa</label><br>
-              <input ngModel="{{editExperiencia?.empresa }}" type="text" name="Empresa" class="form-control">
+              <input ngModel="{{editExperiencia?.empresa }}" type="text" name="empresa" class="form-control">
               <label for="cargo">Cargo</label><br>
-              <input ngModel="{{editExperiencia?.cargo }}" type="text" name="Cargo" class="form-control">
+              <input ngModel="{{editExperiencia?.cargo }}" type="text" name="cargo" class="form-control">
               <label for="fechaIngreso">Fecha de Ingreso</label><br>
               <input ngModel="{{editExperiencia?.fechaIngreso }}" type="text" name="fechaIngreso" class="form-control">
               <label for="fechaEgreso">Fecha de egreso</label><br>
