--- a/Front_End/src/app/componentes/persona/persona.component.html
+++ b/Front_End/src/app/componentes/persona/persona.component.html
@@ -57,7 +57,7 @@
         <div class="modal-body">
            <form #editForm="ngForm">
                 <label for="nombre">Nombre</label><br>
-                <input ngModel="{{editPersona?.nombre}} " type="text" name="nombren"  class="form-control">
+                <input ngModel="{{editPersona?.nombre}} " type="text" name="nombre"  class="form-control">
                 <label for="apellido">Apellido</label><br>
                 <input ngModel="{{editPersona?.apellido}}" type="text" name="apellido"  class="form-control">
                 <label for="sobremi">Sobre Mi</label><br>
